--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,15 @@
 
 /* Navbar styles */
 .navbar {
-    background-color: transparent;
-    padding: 20px 0;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    background-color: #fff;
+    padding: 20px 0;
     z-index: 1000;
 }
+
 
 .container {
     max-width: 1200px;
@@ -96,4 +97,93 @@
         display: block; /* Show hamburger menu on smaller screens */
         cursor: pointer;
     }
+}
+
+
+.banner {
+    background-image: url('Images/Group\ 13\ \(1\)\ \(1\).png'); /* Replace 'your-image-url.jpg' with your actual image path */
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    width: calc(100% - 300px); /* Adjusting for the margins */
+    margin: 0 auto;
+    padding: 0 150px;
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.banner:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Black shadow with 50% opacity */
+}
+
+.banner-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    z-index: 1;
+}
+
+.banner-content h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+.banner-content p {
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.dropdowns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dropdowns select,
+.dropdowns button {
+    margin-right: 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 25px;
+    background-color: transparent;
+    color: #fff;
+    cursor: pointer;
+}
+
+.dropdowns select {
+    flex: 1;
+    max-width: 200px;
+}
+
+.dropdowns button {
+    background-color: #FF5400;
+    transition: background-color 0.3s ease;
+}
+
+.dropdowns button:hover {
+    background-color: #FF4500; /* Darker shade of orange on hover */
+}
+
+.dropdowns select:focus,
+.dropdowns button:focus {
+    outline: none;
+}
+
+/* Transparent glass-like background */
+.dropdown-container {
+    background: rgba(255, 255, 255, 0.2); /* Transparent white */
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 20px;
 }
